[package]
name = "hello_microservice"
version = "0.1.0"
authors = ["Andrea Altea <oni.zerone@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.5.13"
futures = "0.1.27"
hyper = "0.11.27"
log = "0.4.6"
serde_json = "1.0.39"
serde_derive = "1.0.92"
diesel = { version = "1.1.0", features = ["postgres"] }
maud = { git = "https://github.com/lfairy/maud" }
syn = "0.12.7"
url = "1.6.0"